// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component action negative 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="10bwsao-hnqgw2 10bwsao-xe265e 10bwsao-1qr77c8 10bwsao-mjo3f8 10bwsao-18jpc09"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij 10bwsao-1eydhex 10bwsao-1vrz3gw 10bwsao-11hczkh 10bwsao-1rcdinz"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component action positive 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="10bwsao-hnqgw2 10bwsao-lxtrsj 10bwsao-1qr77c8 10bwsao-mjo3f8 10bwsao-15m3xlk"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij 10bwsao-1eydhex 10bwsao-3noqo9 10bwsao-11hczkh 10bwsao-9xlr5z"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component action primary 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="10bwsao-hnqgw2 10bwsao-58zsu5 10bwsao-1qr77c8 10bwsao-mjo3f8 10bwsao-upz7x2"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij 10bwsao-1eydhex 10bwsao-7s6zs0 10bwsao-11hczkh 10bwsao-qou5tu"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component action secondary 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="10bwsao-hnqgw2 10bwsao-8r4mg3 10bwsao-1qr77c8 10bwsao-mjo3f8 10bwsao-14bfgb"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij 10bwsao-1eydhex 10bwsao-1wt7l86 10bwsao-11hczkh 10bwsao-1uebt2"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component size lg 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="10bwsao-hnqgw2 10bwsao-58zsu5 10bwsao-1qr77c8 10bwsao-1m88kvk 10bwsao-upz7x2"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij 10bwsao-1eydhex 10bwsao-7s6zs0 10bwsao-1n3pgep 10bwsao-qou5tu"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component size md 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="10bwsao-hnqgw2 10bwsao-58zsu5 10bwsao-1qr77c8 10bwsao-mjo3f8 10bwsao-upz7x2"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij 10bwsao-1eydhex 10bwsao-7s6zs0 10bwsao-11hczkh 10bwsao-qou5tu"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component size sm 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="10bwsao-hnqgw2 10bwsao-58zsu5 10bwsao-1qr77c8 10bwsao-npzoh9 10bwsao-upz7x2"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij 10bwsao-1eydhex 10bwsao-7s6zs0 10bwsao-1q2dyj6 10bwsao-qou5tu"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component size xs 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="10bwsao-hnqgw2 10bwsao-58zsu5 10bwsao-1qr77c8 10bwsao-1yhbyhf 10bwsao-upz7x2"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij 10bwsao-1eydhex 10bwsao-7s6zs0 10bwsao-193yier 10bwsao-qou5tu"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component variant link 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="10bwsao-hnqgw2 10bwsao-58zsu5 10bwsao-q0taf9 10bwsao-mjo3f8 10bwsao-n2zv0u"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij 10bwsao-1eydhex 10bwsao-7s6zs0 10bwsao-11hczkh"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component variant outline 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="10bwsao-hnqgw2 10bwsao-58zsu5 10bwsao-ha1mj1 10bwsao-mjo3f8 10bwsao-4s28py"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij 10bwsao-1eydhex 10bwsao-7s6zs0 10bwsao-11hczkh"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component variant solid 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="10bwsao-hnqgw2 10bwsao-58zsu5 10bwsao-1qr77c8 10bwsao-mjo3f8 10bwsao-upz7x2"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="727xeq-10883ij 10bwsao-1eydhex 10bwsao-7s6zs0 10bwsao-11hczkh 10bwsao-qou5tu"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
